# TP_POO

./: AlienMock.h  CMakeLists.txt  GenericExample.cpp  GenericExample.h  HypreExample.cpp  HypreExample.h  LocalLinearAlgebra.cpp  LocalLinearAlgebra.h  MpiMock.h  PETScExample.cpp  PETScExample.h  README.md  ResNorm.h  Test.cpp  Timer.cpp  Timer.h  main.cpp
